...
      body={
        <>
          <Text
            style={styles.title}
            accessible
            accessibilityRole="header"
            testID="focus-current-task-title"
          >
            {title}
          </Text>
          <MetadataBand
            afterStep={afterStep}
            waitingOn={waitingOn}
...
